# ReserveLab

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/: README.md
scripts/: build_loss_structures.py  build_paid_triangle.py  clean_table.py  data_validation.py  manual_chain_ladder.py
tests/: test_import.py
